# firefox-extension-llm-summary

./: .babelrc  .eslintrc.js  .gitignore  CLAUDE.md  README.md  create-icons.md  manifest.json  package.json  webpack.config.js
background/: background.js
content-scripts/: content.js
llm-proxy/: README.md  llm_proxy.py  pyproject.toml
options/: options.css  options.html  options.js
popup/: popup.css  popup.html  popup.js
tests/: setup.js
tests/unit/: background.test.js  content-extraction.test.js  popup.test.js  structure.test.js
